--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@
     text-decoration: none;
 }
 
+img{
+    width: 200px;
+    border: 3px solid white;
+    border-radius: 60px;
+    box-shadow: 4px 4px 5px red;
+}
 
 body{
     background-color: burlywood;
