--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img{
     width: 200px;
     border: 3px solid white;
     border-radius: 60px;
-    box-shadow: 4px 4px 5px red;
+    box-shadow: 4px 4px 5px rgb(154, 48, 48);
 }
 
 body{
